Node.js.txt
Welcome to Node.js v22.18.0.
Type ".help" for more information.
> cd C:\Users\KullanıcıAdı\Desktop\lens-dex-main
cd C:\Users\KullanıcıAdı\Desktop\lens-dex-main
   ^

Uncaught SyntaxError: Unexpected identifier 'C'
> npm install --save-dev hardhat @nomiclabs/hardhat-ethers ethers
npm should be run outside of the Node.js REPL, in your normal shell.
(Press Ctrl+D to exit.)
> npm install @openzeppelin/contracts
npm should be run outside of the Node.js REPL, in your normal shell.
(Press Ctrl+D to exit.)
> cd frontend
cd frontend
   ^^^^^^^^

Uncaught SyntaxError: Unexpected identifier 'frontend'
> npm install
npm should be run outside of the Node.js REPL, in your normal shell.
(Press Ctrl+D to exit.)
> accounts: ["0xf33350b3778985a606468906908eb002644c2d59"]
[ '0xf33350b3778985a606468906908eb002644c2d59' ]
> RPC: https://rpc.testnet.lens.xyz
... ChainID: 37111
37111
> Currency: GRASS
Uncaught ReferenceError: GRASS is not defined
> npx hardhat run scripts/deploy.js --network lensTestnet
npx hardhat run scripts/deploy.js --network lensTestnet
    ^^^^^^^

Uncaught SyntaxError: Unexpected identifier 'hardhat'
> Deploying contracts with: 0x1234...
Deploying contracts with: 0x1234...
          ^^^^^^^^^

Uncaught SyntaxError: Unexpected identifier 'contracts'
> TokenA: 0xabc...
TokenA: 0xabc...
             ^^^

Uncaught SyntaxError: Unexpected token '...'
> TokenB: 0xdef...
TokenB: 0xdef...
             ^^^

Uncaught SyntaxError: Unexpected token '...'
> DEX: 0x987...
DEX: 0x987...
          ^^^

Uncaught SyntaxError: Unexpected token '...'
> cd frontend
cd frontend
   ^^^^^^^^

Uncaught SyntaxError: Unexpected identifier 'frontend'
> npm start
npm should be run outside of the Node.js REPL, in your normal shell.
(Press Ctrl+D to exit.)
>
